# optiga-trust-x-ros-node

./: CMakeLists.txt  package.xml
src/: optiga.cpp  optiga_signee.cpp  optiga_verifier.py  pubkey.pem
