<?xml version="1.0"?>
<package format="2">
	<name>optiga_node</name>
	<version>0.0.0</version>
	<description>Optiga ROS wrapper</description>
	<maintainer email="ak@gi.ai">AK</maintainer>
	<license>BDS</license>
	<buildtool_depend>catkin</buildtool_depend>
	<depend>roscpp</depend>
	<depend>std_srvs</depend>
	<depend>message_runtime</depend>
</package>
